<resources>
    <string name="app_name">adoCaoApp</string>
    <string name="title_activity_meus_pets">MeusPetsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nome">Nome</string>
    <string name="ra_a">Raça</string>
    <string name="telefone">Telefone</string>
    <string name="descri_o">Descrição</string>
    <string name="cadastrar_pet">cadastrar pet</string>

    ESTADOS
    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    RAÇAS
    <string-array name="racas">
        <item>Cachorros</item>
        <item>Gatos</item>
        <item>Pássaros</item>
        <item>Peixes</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_conversa">ChatConversaActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>