<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    tools:context="View.CadastrarPetActivity">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/padrao"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerEstados"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:visibility="visible"
            android:background="@color/editpink2"/>

        <Spinner
            android:id="@+id/spinnerRacas"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:background="@color/editpink2"/>
    </LinearLayout>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:id="@+id/txtNome"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:background="@drawable/btncadastrar"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nome"
        android:textColor="@color/black"
        android:textColorHint="@color/editBlack"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/txtRaca"
        android:layout_width="match_parent"
        android:padding="14dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:background="@drawable/btncadastrar"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ra_a"
        android:textColor="@color/black"
        android:textColorHint="@color/editBlack"
        android:gravity="center_horizontal" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/txtTelefone"
        android:layout_width="match_parent"
        android:padding="14dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:background="@drawable/btncadastrar"
        android:layout_marginTop="16dp"
        android:hint="@string/telefone"
        android:textColor="@color/black"
        android:inputType="number"
        app:mask="(##) #####-####"
        app:maskCharacter="_"
        app:maskStyle="completable"
        android:textColorHint="@color/editBlack"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/txtDescricao"
        android:layout_width="match_parent"
        android:padding="14dp"
        android:layout_height="70dp"
        android:textAlignment="center"
        android:background="@drawable/btncadastrar"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/descri_o"
        android:textColor="@color/black"
        android:textColorHint="@color/editBlack"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnCad"
        android:layout_width="match_parent"
        android:onClick="validarDadosCadastro"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/cadastrar_pet"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#E91E63"
        app:cornerRadius="15dp"
        tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>